<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_20sdp"
    tools:context=".OTP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/otpbackbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_baseline_navigate_before_24"
                app:tint="@color/black" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:src="@drawable/sendotp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_2sdp"
                android:includeFontPadding="false"
                android:text="@string/otp_verification_text"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:includeFontPadding="false"
                android:text="@string/otp_description_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <com.chaos.view.PinView
                android:id="@+id/pin_view"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:cursorVisible="true"
                android:hint="@string/app_name"
                android:inputType="number"
                android:itemBackground="@color/white"
                app:cursorColor="@color/black"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="@dimen/_40sdp"
                app:itemRadius="@dimen/_4sdp"
                app:itemWidth="@dimen/_40sdp"
                app:lineColor="@color/peach" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/verifycodebtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/verify_code"
                android:textSize="@dimen/_20ssp"
                app:cornerRadius="@dimen/_10sdp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <Button
                    android:id="@+id/editphonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/_112sdp"
                    android:background="#00000000"
                    android:text="@string/edit_phone_number"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/sendagain"
                    app:layout_constraintHorizontal_bias="0.269"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/sendagain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="#00000000"
                    android:text="@string/send_again"
                    android:textColor="@color/peach"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>