<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQ">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_5sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/FAQBackButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_baseline_navigate_before_24"
                android:padding="@dimen/_5sdp"
                app:tint="@color/peach"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Frequently Asked Question"
                android:textColor="@color/peach"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </RelativeLayout>
        <ScrollView
            android:background="#EFE7E7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q1"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"/>
                        <TextView
                            android:textSize="@dimen/_12sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a1"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q2"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"/>
                        <TextView
                            android:textSize="@dimen/_12sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a2"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q3"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"/>
                        <TextView
                            android:textSize="@dimen/_12sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a3"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/q4"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:padding="@dimen/_10sdp"/>
                        <TextView
                            android:textSize="@dimen/_12sdp"
                            android:padding="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a4"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>




            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>